--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,11 @@
+*,
+a {
+  cursor: none;
+}
+
 body {
   margin: 0;
   height: 100vh;
-  cursor: none;
 }
 
 .cursor {
@@ -14,7 +18,7 @@ body {
   height: 20px;
   width: 20px;
   border: 1px solid #ccc;
-  border-radius: 100%;
+  border-radius: 5px;
   position: absolute;
   -webkit-transition-duration: 300ms;
           transition-duration: 300ms;
@@ -28,7 +32,7 @@ body {
   content: "";
   height: 20px;
   width: 20px;
-  border-radius: 100%;
+  border-radius: 5px;
   position: absolute;
   top: -6px;
   left: -6px;
