--- a/css/main.scss
+++ b/css/main.scss
@@ -1,8 +1,11 @@
+*,
+a {
+  cursor: none;
+}
 body {
   margin: 0;
   height: 100vh;
   //cursor: url(../images/cursor.png), auto;
-  cursor: none;
 }
 .cursor {
   z-index: 10000;
@@ -14,7 +17,7 @@ body {
   height: 20px;
   width: 20px;
   border: 1px solid #ccc;
-  border-radius: 100%;
+  border-radius: 5px;
   position: absolute;
   transition-duration: 300ms;
   transition-timing-function: ease-out;
@@ -23,7 +26,7 @@ body {
     content: "";
     height: 20px;
     width: 20px;
-    border-radius: 100%;
+    border-radius: 5px;
     position: absolute;
     top: -6px;
     left: -6px;
